# MLOps

./: README.md
.dvc/: config
hw_1/: Dockerfile  Makefile  README.md  perf_tests.py  pyproject.toml  setup.py  tests.py
hw_1/relu_module/: __init__.py
hw_1/relu_module/module/: py_relu_module.cpp
hw_1/relu_module/src/: relu_bind.cpp  relu_bind.hpp
hw_2/: train.py
hw_2/configs/: simple_config.yaml
hw_2/configs/data/: data_config.yaml
hw_2/configs/model/: model_config.yaml
hw_2/configs/train/: train_config.yaml
hw_2/data/: .gitignore  dataset_1.csv.dvc  dataset_2.csv.dvc
hw_2/src/: data_module.py  model_module.py
hw_3/: Dockerfile  client.py  count_flops.py  docker_comands  layers  perf_model_ONNX  torch2onnx.py
hw_3/assets/tokenizer/: tokenizer.json
hw_3/model_repository/ensemble/: config.pbtxt
hw_3/model_repository/model_ONNX/: config.pbtxt
hw_3/model_repository/model_TRT_BEST/: config.pbtxt
hw_3/model_repository/model_TRT_FP16/: config.pbtxt
hw_3/model_repository/model_TRT_FP32/: config.pbtxt
hw_3/model_repository/model_TRT_INT8/: config.pbtxt
hw_3/model_repository/tokenizer/: config.pbtxt
hw_3/model_repository/tokenizer/1/: model.py
