[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"
name = "MyReLU"
description = "ReLU function for vector"
dynamic = ["version"]
authors = [
  {name = "Tskhay Alexandr", email = "tskhai.a@phystech.su"},
]
maintainers = [
  {name = "Tskhay Alexandr", email = "tskhai.a@phystech.su"},
]
